@@ -118,6 +118,7 @@ segment = function(x,
                    width = 900,
                    height = 500,
                    units = 'px',
+                   res = NA,
                    sylPlot = list(
                      lty = 1,
                      lwd = 2,
@@ -224,7 +225,7 @@ segment = function(x,
       last_char = substr(savePath, nchar(savePath), nchar(savePath))
       if(last_char != '/') savePath = paste0(savePath, '/')
       jpeg(filename = paste0(savePath, plotname, ".jpg"),
-           width = width, height = height, units = units)
+           width = width, height = height, units = units, res = res)
     }
     plot(x = envelope$time, y = envelope$value, type = 'l', col = col,
          xlab = xlab, ylab = ylab, main = main, ...)
@@ -302,6 +303,7 @@ segment = function(x,
 #' abline(a=0, b=1, col='red')
 #' }
 segmentFolder = function (myfolder,
+                          htmlPlots = TRUE,
                           shortestSyl = 40,
                           shortestPause = 40,
                           sylThres = 0.9,
@@ -325,6 +327,7 @@ segmentFolder = function (myfolder,
                           width = 900,
                           height = 500,
                           units = 'px',
+                          res = NA,
                           sylPlot = list(
                             lty = 1,
                             lwd = 2,
@@ -342,8 +345,9 @@ segmentFolder = function (myfolder,
   filesizes = apply(as.matrix(filenames), 1, function(x) file.info(x)$size)
   myPars = mget(names(formals()), sys.frame(sys.nframe()))
   # exclude unnecessary args
-  myPars = myPars[!names(myPars) %in% c('myfolder', 'verbose', 'reportEvery',
-                                        'sylPlot', 'burstPlot')]  # otherwise flattens lists
+  myPars = myPars[!names(myPars) %in% c(
+    'myfolder', 'htmlPlots', 'verbose',
+    'reportEvery', 'sylPlot', 'burstPlot')]  # otherwise flattens lists
   # exclude ...
   myPars = myPars[1:(length(myPars)-1)]
   # add back sylPlot and burstPlot
@@ -372,6 +376,10 @@ segmentFolder = function (myfolder,
   } else {
     output = result
     names(output) = filenames
+  }
+
+  if (htmlPlots) {
+    htmlPlots(myfolder, myfiles = filenames)
   }
 
   return (output)
